--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "egghead-getting-started-with-express",
+  "name": "hello-express",
   "version": "1.0.0",
-  "description": "Egghead - Getting Started with Express",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bourliam/hello-express.git"
+  },
   "keywords": [],
-  "author": "Ben Clinkinbeard <ben.clinkinbeard@gmail.com> (http://benclinkinbeard.com/)",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bourliam/hello-express/issues"
+  },
+  "homepage": "https://github.com/bourliam/hello-express#readme",
   "dependencies": {
-    "express": "^4.13.1"
+    "express": "^4.16.3"
   },
   "devDependencies": {
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.17.5"
   }
 }
